--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,9 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     container_name: avideo_db
     #tty: true
-    ports:
-      - 3306
     environment:
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
+      # - MYSQL_USER=root
+      # - MYSQL_PASSWORD=root
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=avideo
       - TZ=UTC
@@ -20,10 +18,24 @@ services:
       - ./storage/data:/var/lib/mysql
     networks:
       - app_net
+    ports:
+      - "0.0.0.0:3306:3306"
+    restart: always
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: sqladmin
+    depends_on:
+      - db
+    ports:
+      - "8080:80"
+    networks:
+      - app_net
+    restart: always
 
   web:
     depends_on:
-       - db
+      - db
     hostname: avideo_web
     build: .
     environment:
@@ -32,13 +44,16 @@ services:
     expose:
       - 80
       - 443
-    #volumes:
-    #  - .:/var/www/avideo:rw
+    volumes:
+      - .:/var/www/avideo:rw
     networks:
       - app_net
+    ports:
+      - "0.0.0.0:80:80"
+      - "0.0.0.0:443:443"
 
-#Docker Networks
+
+# Docker Networks
 networks:
   app_net:
     driver: bridge
-
